# wlbouncer

./: README.md  configuration.md  meson.build
include/: wlbouncer.h
src/: libwayland-shim.cpp  listeners.cpp  policy.cpp  policy.h
